# webserver

./: .gitignore  CMakeLists.txt  EventPool.cpp  EventPool.h  HttpServer.cpp  HttpServer.h  Job.h  Listener.cpp  Listener.h  Logger.cpp  Logger.h  Makefile  Request.cpp  Request.h  Response.cpp  Response.h  ResponseHeader.cpp  ResponseHeader.hpp  ServerError.cpp  ServerError.hpp  Socket.cpp  Socket.h  TcpSocket.cpp  TcpSocket.h  client.cpp  http.cpp  http.h  index.html  kqueue.cpp  kqueue.h  main.cpp  test.sh  utils.cpp  utils.h
.github/workflows/: cmake.yml
autoindex/: Autoindex.cpp  Autoindex.hpp
cgi/: Cgi.cpp  Cgi.hpp
event/: EventPool.cpp  EventPool.h  kqueue.cpp
http/: Request.cpp  Request.h  Response.cpp  Response.h  ResponseHeader.cpp  ResponseHeader.hpp  async.cpp  http.cpp  http.h  httpExceptions.h
nginx/: Dockerfile  index.html  nginx.conf
settingsManager/: ConfigParser.cpp  ConfigParser.hpp  Route.cpp  Route.hpp  Server.cpp  Server.hpp  SettingsManager.cpp  SettingsManager.hpp  main.cpp  webserv.yaml  webserv_default.yaml
utils/: CustomTime.cpp  CustomTime.h  Logger.cpp  Logger.h  TcpSocket.cpp  TcpSocket.h  Time.cpp  Time.h  utils.cpp  utils.h
